service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: hyr-work
spec:
  selector:
    app: hyr-nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
